--- a/main.kv
+++ b/main.kv
@@ -15,7 +15,7 @@
 			size_hint_y: 0.1
             Image:
                 id: logo
-                source:'asset/logo.png'
+                source:'asset/logo_labtek.png'
                 size_hint_x: 0.2
                 allow_stretch: True
 
@@ -109,7 +109,7 @@
 							rectangle: self.x, self.y, self.width, self.height
 
 					Label:
-						text: "JENIS GELOMBANG"
+						text: "WAVEFORM"
 						bold: True
 						font_size: 44
 						color: 0, 0, 0
@@ -129,10 +129,10 @@
 							color: 0.5, 0, 0
 							size_hint_x: None
 							width: 300
-							on_active: root.checkbox_click(self, self.active, "SEGITIGA")
+							on_active: root.checkbox_click(self, self.active, "TRIANGLE")
 
 						Label:
-							text: "SEGITIGA"
+							text: "TRIANGLE"
 							text_size: self.size
 							halign: "left"
 							valign: "middle"
@@ -144,10 +144,10 @@
 							color: 0.5, 0, 0
 							size_hint_x: None
 							width: 300
-							on_active: root.checkbox_click(self, self.active, "PERSEGI")
+							on_active: root.checkbox_click(self, self.active, "SQUARE")
 							
 						Label:
-							text: "PERSEGI"
+							text: "SQUARE"
 							text_size: self.size
 							halign: "left"
 							valign: "middle"
@@ -159,10 +159,10 @@
 							color: 0.5, 0, 0
 							size_hint_x: None
 							width: 300
-							on_active: root.checkbox_click(self, self.active, "GIGI GERGAJI")		
+							on_active: root.checkbox_click(self, self.active, "SAWTOOTH")		
 
 						Label:
-							text: "GIGI GERGAJI"
+							text: "SAWTOOTH"
 							text_size: self.size
 							halign: "left"
 							valign: "middle"
@@ -187,7 +187,7 @@
 							rectangle: self.x, self.y, self.width, self.height
 					
 					Label:
-						text: "RENTANG FREKUENSI"
+						text: "FREQUENCY"
 						bold: True
 						font_size: 44
 						color: 0, 0, 0
@@ -243,7 +243,7 @@
 							rectangle: self.x, self.y, self.width, self.height
 
 					Label:
-						text: "PERIODE WAKTU"
+						text: "TIME PERIODE"
 						bold: True
 						font_size: 44
 						color: 0, 0, 0
@@ -264,7 +264,7 @@
 							orientation: 'vertical'
 
 						Label:
-							text: str(slider_interval.value) + " milli detik" 
+							text: str(slider_interval.value) + " milli second" 
 							font_size:36
 							color: 0, 0, 0
 							bold: True
@@ -305,7 +305,7 @@
 
 				Label:
 					id: txt_slider_distance
-					text: "JARAK " + str(slider_distance.value) + " mm" 
+					text: "DISTANCE " + str(slider_distance.value) + " mm" 
 					font_size:36
 					color: 0, 0, 0
 					bold: True
@@ -366,7 +366,7 @@
 					value: root.zoom
 
 				Button:
-					text: "TANDAI"
+					text: "MARK"
 					font_size: 44
 					on_press: root.map_mark()
 			MapView:
@@ -431,6 +431,15 @@
 				text: "MAP"
 				font_size: 44
 				on_press: root.map_screen()
+
+		#support
+		Label:
+			text: "Supported by: PT. UNGGUL NUSA TEKNIKA"
+			font_size: 30
+			size_hint_y: 0.02
+			halign: 'right'
+			valign: 'center'
+			color: 0, 0, 0
 
 
 
