--- a/main.kv
+++ b/main.kv
@@ -211,27 +211,28 @@
 
 						Slider:
 							id: slider_min
-							min: 190
-							max: 210
-							step: 1
+							min: 199.99
+							max: 200.01
+							step: 0.001
+							value: 199.995
 							orientation: 'vertical'
 
 						Slider:
 							id: slider_max
-							min: 160
-							max: 360
-							step: 1
-							value: 210
+							min: 199.99
+							max: 200.01
+							step: 0.001
+							value: 200.005
 							orientation: 'vertical'
 
 						Label:
-							text: str(slider_min.value) + " Mhz" 
+							text: f"{slider_min.value:2.3f} Mhz" 
 							font_size:36
 							color: 0, 0, 0
 							bold: True
 						
 						Label:
-							text: str(slider_max.value) + " Mhz"
+							text:  f"{slider_max.value:2.3f} Mhz" 
 							font_size:36
 							color: 0, 0, 0
 							bold: True
@@ -297,20 +298,20 @@
 						row_force_default: True
 						row_default_height: 120
 
-						CheckBox:
-							group: "method"
-							color: 0.5, 0, 0
-							size_hint_x: None
-							width: 300
-							on_active: root.checkbox_method_click(self, self.active, "ODOMETRY")
+						#CheckBox:
+						#	group: "method"
+						#	color: 0.5, 0, 0
+						#	size_hint_x: None
+						#	width: 300
+						#	on_active: root.checkbox_method_click(self, self.active, "ODOMETRY")
 
-						Label:
-							text: "ODOMETRY"
-							text_size: self.size
-							halign: "left"
-							valign: "middle"
-							font_size:44
-							color: 0, 0, 0
+						#Label:
+						#	text: "ODOMETRY"
+						#	text_size: self.size
+						#	halign: "left"
+						#	valign: "middle"
+						#	font_size:44
+						#	color: 0, 0, 0
 
 						CheckBox:
 							group: "method"
